k8s/deployment-rest-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: rest-api
  template:
    metadata:
      name: rest-api-pod
      labels:
        component: rest-api
    spec:
      containers:
        - name: rest-api-container
          image: swoqe/librarianship-rest-api
          ports:
            - containerPort: 8080
