k8s/deployment-rest-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: rest-client
  template:
    metadata:
      name: rest-client-pod
      labels:
        component: rest-client
    spec:
      containers:
        - name: rest-client
          image: swoqe/librarianship-rest-client
          ports:
            - containerPort: 8080
