k8s/cluster-ip-service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-service-postgres
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
