k8s/cluster-ip-service-rest-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: rest-api
  ports:
    - port: 8080
      targetPort: 8080
