k8s/cluster-ip-service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: ui
  ports:
    - port: 8081
      targetPort: 8081
