k8s/node-port-rest-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-client-node-port
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30800
  selector:
    component: rest-client
